Houskeeping and improving Swagger Documentation
